# drf-api

./: db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
config/: settings.py  urls.py
drfapp/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
drfapp/migrations/: 0001_initial.py
